<resources>
    <string name="app_name">OzCalibration</string>
    <string name="CAMERA">CAMERA</string>
    <string name="ACCELEROMETER">ACCELEROMETER</string>
    <string name="MICROPHONE">MICROPHONE</string>
    <string name="DOPPLER">TRAFFIC CAMERA (DOPPLER)</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">About</string>
    <string name="title_activity_microphone">MicrophoneActivity</string>

    <string name="START_MICROPHONE">START MICROPHONE</string>
    <string name="STOP_MICROPHONE">STOP MICROPHONE</string>
    <string name="audio_status_recording">Starting to Record</string>
    <string name="audio_status_stopped">Stopped recording</string>
    <string name="title_activity_accelerometer">AccelerometerActivity</string>
    <string name="Calibrate">Calibration</string>
    <string name="Application">Application</string>

    <string name="all_sensors">All Sensors</string>
    <string name="testing">Testing</string>
    <string name="VIEW_MIC_LOG">View Log</string>
    <string name="play_audio">Play Audio</string>
    <string name="clear_log">Clear log</string>
    <string name="STOP_RECORDING">Stop Recording</string>
    <string name="START_RECORDING">Start Recording</string>
    <string name="RECORDING">Recording…</string>
    <string name="LAG">Lag (ms):</string>
    <string name="FPS">FPS:</string>
    <string name="TIME_MS">Time (ms):</string>
    <string name="title_activity_all_in_one">AllInOneActivity</string>
    <string name="title_activity_all_in_one_dblog">AllInOneDBLog</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="about_us_description">This app was created as part of a project for CS3218 AY15/16 Semester 2. \n\nIt is intended to explore a method to calibrate the accelerometer, camera and microphone and match samples from each sensor with those from the other two sensors.</string>
    <string name="about_us">About This App</string>
    <string name="mainpagedescription">Try the individual calibration activities to understand how they work then use them all together.</string>
</resources>
