<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="sg.edu.nus.accelerometer.AccelerometerActivityFragment"
              tools:showIn="@layout/activity_accelerometer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_X"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="X"
            android:gravity="center"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/textview_ax"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_Y"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="Y"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/textview_ay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_Z"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="Z"
            android:gravity="center"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/textview_az"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_accelerometer_fps_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/FPS"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/textview_accelerometer_fps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_timestamps_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/TIME_MS"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/textview_accelerometer_timestamp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_lag_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/LAG"
            android:gravity="center"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/textview_lag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_start_record_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="start_calibrate_acc"
        android:text="@string/START_RECORDING"/>

    <Button
        android:id="@+id/btn_stop_record_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="stop_calibrate_acc"
        android:text="@string/STOP_RECORDING"/>

    <Button
        android:id="@+id/btn_view_acc_db1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="view_acc_log"
        android:text="@string/VIEW_MIC_LOG"/>
</LinearLayout>
